--- a/AgentEx1.ipynb
+++ b/AgentEx1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNHuFhP6rsi0xeI5lId7tc1",
+      "authorship_tag": "ABX9TyP7ZdhYE72Hn+94+puDQkEJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
       "source": [
         "#build and deploy an agent that uses the Gemini Pro model, VertexAI Reasoning Engine, Python functions as tools, and LangChain for orchestration\n",
         "\n",
-        "#Gitaccount: vkrisvasan Repo:? Code:?\n",
+        "#Gitaccount: vkrisvasan Repo: GenAIAgent Code: AgentEx1.ipynb\n",
         "#Simple Agent assist implemented by\n",
         "  #1. creating a project in google vertexai https://console.cloud.google.com/vertex-ai [note the projectID]\n",
         "  #2. create storage bucket in https://console.cloud.google.com/storage/browser - use  \"us-central1\" location [Note location and bucket ID]\n"
