--- a/AgentEx1.ipynb
+++ b/AgentEx1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP7ZdhYE72Hn+94+puDQkEJ",
+      "authorship_tag": "ABX9TyPkei86gX3WyUyOOlS8pKlp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,6 +35,7 @@
       "outputs": [],
       "source": [
         "#build and deploy an agent that uses the Gemini Pro model, VertexAI Reasoning Engine, Python functions as tools, and LangChain for orchestration\n",
+        "#The Agent retrieves the exchange rate between two currencies on a specified date\n",
         "\n",
         "#Gitaccount: vkrisvasan Repo: GenAIAgent Code: AgentEx1.ipynb\n",
         "#Simple Agent assist implemented by\n",
@@ -54,10 +55,42 @@
         "    requests"
       ],
       "metadata": {
-        "id": "XzW2R75XN1-y"
+        "id": "XzW2R75XN1-y",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "collapsed": true,
+        "outputId": "94ec13f9-5e6f-4e26-e915-f887237a49e1"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.0/5.0 MB\u001b[0m \u001b[31m9.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.0/1.0 MB\u001b[0m \u001b[31m13.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m55.8/55.8 kB\u001b[0m \u001b[31m2.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m409.3/409.3 kB\u001b[0m \u001b[31m5.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m64.9/64.9 kB\u001b[0m \u001b[31m3.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.0/2.0 MB\u001b[0m \u001b[31m19.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m302.9/302.9 kB\u001b[0m \u001b[31m9.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m127.1/127.1 kB\u001b[0m \u001b[31m1.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m126.5/126.5 kB\u001b[0m \u001b[31m5.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m67.9/67.9 kB\u001b[0m \u001b[31m4.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.1/2.1 MB\u001b[0m \u001b[31m16.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m49.2/49.2 kB\u001b[0m \u001b[31m3.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m125.6/125.6 kB\u001b[0m \u001b[31m7.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m123.5/123.5 kB\u001b[0m \u001b[31m9.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m121.6/121.6 kB\u001b[0m \u001b[31m14.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m53.0/53.0 kB\u001b[0m \u001b[31m3.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m145.0/145.0 kB\u001b[0m \u001b[31m5.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+            "google-colab 1.0.0 requires requests==2.31.0, but you have requests 2.32.3 which is incompatible.\u001b[0m\u001b[31m\n",
+            "\u001b[0m"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -73,7 +106,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4Mik5EMiTTky",
-        "outputId": "b701b717-dca1-4d9e-8715-7440611ad214"
+        "outputId": "47d35a2d-edae-4e32-f61f-26b046b76c01"
       },
       "execution_count": null,
       "outputs": [
@@ -85,7 +118,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 3
         }
       ]
     },
@@ -116,24 +149,10 @@
         "    os.environ[credential]=getpass.getpass(\"Provide your...\" + credential)"
       ],
       "metadata": {
-        "id": "dpF7UNSPWYFj",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "443e8921-9c55-44bb-bbeb-3f1f3a3b10cc"
+        "id": "dpF7UNSPWYFj"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Provide your...GCP_PROJECT_ID··········\n",
-            "Provide your...LOCATION··········\n",
-            "Provide your...STAGING_BUCKET··········\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -214,25 +233,10 @@
         "get_exchange_rate(currency_from=\"USD\", currency_to=\"INR\")"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ziU1BWncZXZt",
-        "outputId": "d1b0a524-ba3c-4de6-f493-d3ece7f6e73d"
+        "id": "ziU1BWncZXZt"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "{'amount': 1.0, 'base': 'USD', 'date': '2024-06-14', 'rates': {'INR': 83.54}}"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 9
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -255,71 +259,10 @@
         "agent.query(input=\"What's the exchange rate from US dollars to Indian currency today?\")"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "xXjWR2YkZfkW",
-        "outputId": "c12c5f7c-b056-43e9-d986-c53fbefb73dd"
+        "id": "xXjWR2YkZfkW"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "{'input': \"What's the exchange rate from US dollars to Indian currency today?\",\n",
-              " 'output': 'The exchange rate from US dollars to Indian rupees on 2024-06-14 is 1 USD to 83.54 INR. \\n',\n",
-              " 'intermediate_steps': [[{'lc': 1,\n",
-              "    'type': 'constructor',\n",
-              "    'id': ['langchain', 'schema', 'agent', 'ToolAgentAction'],\n",
-              "    'kwargs': {'tool': 'get_exchange_rate',\n",
-              "     'tool_input': {'currency_from': 'USD', 'currency_to': 'INR'},\n",
-              "     'log': \"\\nInvoking: `get_exchange_rate` with `{'currency_from': 'USD', 'currency_to': 'INR'}`\\n\\n\\n\",\n",
-              "     'type': 'AgentActionMessageLog',\n",
-              "     'message_log': [{'lc': 1,\n",
-              "       'type': 'constructor',\n",
-              "       'id': ['langchain', 'schema', 'messages', 'AIMessageChunk'],\n",
-              "       'kwargs': {'content': '',\n",
-              "        'additional_kwargs': {'function_call': {'name': 'get_exchange_rate',\n",
-              "          'arguments': '{\"currency_from\": \"USD\", \"currency_to\": \"INR\"}'}},\n",
-              "        'response_metadata': {'is_blocked': False,\n",
-              "         'safety_ratings': [{'category': 'HARM_CATEGORY_HATE_SPEECH',\n",
-              "           'probability_label': 'NEGLIGIBLE',\n",
-              "           'blocked': False},\n",
-              "          {'category': 'HARM_CATEGORY_DANGEROUS_CONTENT',\n",
-              "           'probability_label': 'NEGLIGIBLE',\n",
-              "           'blocked': False},\n",
-              "          {'category': 'HARM_CATEGORY_HARASSMENT',\n",
-              "           'probability_label': 'NEGLIGIBLE',\n",
-              "           'blocked': False},\n",
-              "          {'category': 'HARM_CATEGORY_SEXUALLY_EXPLICIT',\n",
-              "           'probability_label': 'NEGLIGIBLE',\n",
-              "           'blocked': False}],\n",
-              "         'citation_metadata': None,\n",
-              "         'usage_metadata': {'prompt_token_count': 74,\n",
-              "          'candidates_token_count': 13,\n",
-              "          'total_token_count': 87}},\n",
-              "        'type': 'AIMessageChunk',\n",
-              "        'id': 'run-5535e6ed-cfc0-4d6b-ba64-68e4db08174f',\n",
-              "        'tool_calls': [{'name': 'get_exchange_rate',\n",
-              "          'args': {'currency_from': 'USD', 'currency_to': 'INR'},\n",
-              "          'id': '0c209c1b-a3a0-4651-86f2-d16898396f49'}],\n",
-              "        'tool_call_chunks': [{'name': 'get_exchange_rate',\n",
-              "          'args': '{\"currency_from\": \"USD\", \"currency_to\": \"INR\"}',\n",
-              "          'id': '0c209c1b-a3a0-4651-86f2-d16898396f49',\n",
-              "          'index': None}],\n",
-              "        'invalid_tool_calls': []}}],\n",
-              "     'tool_call_id': '0c209c1b-a3a0-4651-86f2-d16898396f49'}},\n",
-              "   {'amount': 1.0,\n",
-              "    'base': 'USD',\n",
-              "    'date': '2024-06-14',\n",
-              "    'rates': {'INR': 83.54}}]]}"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 15
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -352,31 +295,10 @@
         ")"
       ],
       "metadata": {
-        "id": "5pMuWw6SaGvt",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "3216ae06-e47f-4033-b694-cd00e7c6e36e"
+        "id": "5pMuWw6SaGvt"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "INFO:vertexai.reasoning_engines._reasoning_engines:Using bucket agent_kv_ex1\n",
-            "INFO:vertexai.reasoning_engines._reasoning_engines:Writing to gs://agent_kv_ex1/reasoning_engine/reasoning_engine.pkl\n",
-            "INFO:vertexai.reasoning_engines._reasoning_engines:Writing to gs://agent_kv_ex1/reasoning_engine/requirements.txt\n",
-            "INFO:vertexai.reasoning_engines._reasoning_engines:Creating in-memory tarfile of extra_packages\n",
-            "INFO:vertexai.reasoning_engines._reasoning_engines:Writing to gs://agent_kv_ex1/reasoning_engine/dependencies.tar.gz\n",
-            "INFO:vertexai.reasoning_engines._reasoning_engines:Creating ReasoningEngine\n",
-            "INFO:vertexai.reasoning_engines._reasoning_engines:Create ReasoningEngine backing LRO: projects/17529158352/locations/us-central1/reasoningEngines/596902872487034880/operations/2443296565574500352\n",
-            "INFO:vertexai.reasoning_engines._reasoning_engines:ReasoningEngine created. Resource name: projects/17529158352/locations/us-central1/reasoningEngines/596902872487034880\n",
-            "INFO:vertexai.reasoning_engines._reasoning_engines:To use this ReasoningEngine in another session:\n",
-            "INFO:vertexai.reasoning_engines._reasoning_engines:reasoning_engine = vertexai.preview.reasoning_engines.ReasoningEngine('projects/17529158352/locations/us-central1/reasoningEngines/596902872487034880')\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -386,26 +308,10 @@
         ")"
       ],
       "metadata": {
-        "id": "kRmMqB6gaPsb",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "287bbd0c-c324-4b7b-a8e8-8a1ac2dd86ea"
+        "id": "kRmMqB6gaPsb"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "{'input': \"What's the exchange rate from US dollars to Indian currency today?\",\n",
-              " 'output': 'The exchange rate from US dollars to Indian rupees is 1 USD to 83.54 INR as of June 14, 2024. \\n'}"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 18
-        }
-      ]
+      "outputs": []
     }
   ]
 }
