--- a/AgentEx2.ipynb
+++ b/AgentEx2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOL8oXjqsL60zviJxb0/Ylm",
+      "authorship_tag": "ABX9TyN3s1llDNwmr+dpxIdNlQ1Q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,12 @@
       "source": [
         "#Building AI Agents With Crew AI using Google Gemini, Groq, LLama3\n",
         "#CrewAI is an open-source framework that helps you build your own autonomous AI agents\n",
-        "\n"
+        "#Creating two Agents one doign the research job and another doing the content writer job\n",
+        "\n",
+        "#Gitaccount: vkrisvasan Repo: GenAIAgent Code: AgentEx2.ipynb\n",
+        "#Simple Agent assist implemented by\n",
+        "  #1. creating a project in google vertexai https://console.cloud.google.com/vertex-ai [note the projectID]\n",
+        "  #2. create a serper api key https://serpapi.com/dashboard to scrape Google and other search engines from serper's fast, easy, and complete API"
       ]
     },
     {
@@ -52,7 +57,7 @@
         "id": "_S4WYKysRLhk",
         "outputId": "9905b42c-f445-4f56-f122-de747155d2bf"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -283,7 +288,7 @@
       "metadata": {
         "id": "ACby65NARlyE"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -294,7 +299,7 @@
       "metadata": {
         "id": "tOyfcd0FUnht"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -308,7 +313,7 @@
       "metadata": {
         "id": "acfsduWkRXI0"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -324,7 +329,7 @@
       "metadata": {
         "id": "PoiITNSgUGdv"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -341,7 +346,7 @@
       "metadata": {
         "id": "kUfXAjrNUSkR"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -354,7 +359,7 @@
       "metadata": {
         "id": "zzR_8f-kWryL"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -387,7 +392,7 @@
       "metadata": {
         "id": "Jy-ijmxnXqlr"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -405,7 +410,7 @@
         "id": "yzXoUJXfXHaW",
         "outputId": "48180e4f-013f-4d74-cc18-ccff12493bbd"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -430,7 +435,7 @@
         "id": "4qJ5K-GUbN04",
         "outputId": "5cd9ffb7-8195-47e6-f791-3867d973e1a9"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
