--- a/AgentEx1.ipynb
+++ b/AgentEx1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPkei86gX3WyUyOOlS8pKlp",
+      "authorship_tag": "ABX9TyOa8kL1EYp9tgvvVSLAMFbV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
         "#Gitaccount: vkrisvasan Repo: GenAIAgent Code: AgentEx1.ipynb\n",
         "#Simple Agent assist implemented by\n",
         "  #1. creating a project in google vertexai https://console.cloud.google.com/vertex-ai [note the projectID]\n",
-        "  #2. create storage bucket in https://console.cloud.google.com/storage/browser - use  \"us-central1\" location [Note location and bucket ID]\n"
+        "  #2. create storage bucket in https://console.cloud.google.com/storage/browser - use  \"us-central1\" location [Note location and bucket ID]"
       ]
     },
     {
@@ -56,41 +56,10 @@
       ],
       "metadata": {
         "id": "XzW2R75XN1-y",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "collapsed": true,
-        "outputId": "94ec13f9-5e6f-4e26-e915-f887237a49e1"
+        "collapsed": true
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.0/5.0 MB\u001b[0m \u001b[31m9.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.0/1.0 MB\u001b[0m \u001b[31m13.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m55.8/55.8 kB\u001b[0m \u001b[31m2.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m409.3/409.3 kB\u001b[0m \u001b[31m5.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m64.9/64.9 kB\u001b[0m \u001b[31m3.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.0/2.0 MB\u001b[0m \u001b[31m19.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m302.9/302.9 kB\u001b[0m \u001b[31m9.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m127.1/127.1 kB\u001b[0m \u001b[31m1.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m126.5/126.5 kB\u001b[0m \u001b[31m5.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m67.9/67.9 kB\u001b[0m \u001b[31m4.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.1/2.1 MB\u001b[0m \u001b[31m16.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m49.2/49.2 kB\u001b[0m \u001b[31m3.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m125.6/125.6 kB\u001b[0m \u001b[31m7.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m123.5/123.5 kB\u001b[0m \u001b[31m9.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m121.6/121.6 kB\u001b[0m \u001b[31m14.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m53.0/53.0 kB\u001b[0m \u001b[31m3.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m145.0/145.0 kB\u001b[0m \u001b[31m5.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-            "google-colab 1.0.0 requires requests==2.31.0, but you have requests 2.32.3 which is incompatible.\u001b[0m\u001b[31m\n",
-            "\u001b[0m"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -106,7 +75,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4Mik5EMiTTky",
-        "outputId": "47d35a2d-edae-4e32-f61f-26b046b76c01"
+        "outputId": "d8f19562-d79b-40c6-9d9b-c8bd3435e9e0"
       },
       "execution_count": null,
       "outputs": [
@@ -118,7 +87,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 4
         }
       ]
     },
@@ -149,10 +118,24 @@
         "    os.environ[credential]=getpass.getpass(\"Provide your...\" + credential)"
       ],
       "metadata": {
-        "id": "dpF7UNSPWYFj"
+        "id": "dpF7UNSPWYFj",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "29b55115-0946-49a5-f5f3-fb2d7dd8ce58"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Provide your...GCP_PROJECT_ID··········\n",
+            "Provide your...LOCATION··········\n",
+            "Provide your...STAGING_BUCKET··········\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -233,10 +216,25 @@
         "get_exchange_rate(currency_from=\"USD\", currency_to=\"INR\")"
       ],
       "metadata": {
-        "id": "ziU1BWncZXZt"
+        "id": "ziU1BWncZXZt",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d3ad2826-bf42-43ec-95ab-db3f7fa9bd06"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'amount': 1.0, 'base': 'USD', 'date': '2024-06-21', 'rates': {'INR': 83.57}}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -259,10 +257,71 @@
         "agent.query(input=\"What's the exchange rate from US dollars to Indian currency today?\")"
       ],
       "metadata": {
-        "id": "xXjWR2YkZfkW"
+        "id": "xXjWR2YkZfkW",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1f58200f-f057-49cb-ccbd-1c43ad4da0f6"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'input': \"What's the exchange rate from US dollars to Indian currency today?\",\n",
+              " 'output': 'The exchange rate from US dollars to Indian rupees is 1 USD to 83.57 INR. \\n',\n",
+              " 'intermediate_steps': [[{'lc': 1,\n",
+              "    'type': 'constructor',\n",
+              "    'id': ['langchain', 'schema', 'agent', 'ToolAgentAction'],\n",
+              "    'kwargs': {'tool': 'get_exchange_rate',\n",
+              "     'tool_input': {'currency_from': 'USD', 'currency_to': 'INR'},\n",
+              "     'log': \"\\nInvoking: `get_exchange_rate` with `{'currency_from': 'USD', 'currency_to': 'INR'}`\\n\\n\\n\",\n",
+              "     'type': 'AgentActionMessageLog',\n",
+              "     'message_log': [{'lc': 1,\n",
+              "       'type': 'constructor',\n",
+              "       'id': ['langchain', 'schema', 'messages', 'AIMessageChunk'],\n",
+              "       'kwargs': {'content': '',\n",
+              "        'additional_kwargs': {'function_call': {'name': 'get_exchange_rate',\n",
+              "          'arguments': '{\"currency_from\": \"USD\", \"currency_to\": \"INR\"}'}},\n",
+              "        'response_metadata': {'is_blocked': False,\n",
+              "         'safety_ratings': [{'category': 'HARM_CATEGORY_HATE_SPEECH',\n",
+              "           'probability_label': 'NEGLIGIBLE',\n",
+              "           'blocked': False},\n",
+              "          {'category': 'HARM_CATEGORY_DANGEROUS_CONTENT',\n",
+              "           'probability_label': 'NEGLIGIBLE',\n",
+              "           'blocked': False},\n",
+              "          {'category': 'HARM_CATEGORY_HARASSMENT',\n",
+              "           'probability_label': 'NEGLIGIBLE',\n",
+              "           'blocked': False},\n",
+              "          {'category': 'HARM_CATEGORY_SEXUALLY_EXPLICIT',\n",
+              "           'probability_label': 'NEGLIGIBLE',\n",
+              "           'blocked': False}],\n",
+              "         'citation_metadata': None,\n",
+              "         'usage_metadata': {'prompt_token_count': 74,\n",
+              "          'candidates_token_count': 13,\n",
+              "          'total_token_count': 87}},\n",
+              "        'type': 'AIMessageChunk',\n",
+              "        'id': 'run-0dbb4475-9adb-4f2a-87d2-49aabd7539fc',\n",
+              "        'tool_calls': [{'name': 'get_exchange_rate',\n",
+              "          'args': {'currency_from': 'USD', 'currency_to': 'INR'},\n",
+              "          'id': 'b65d40b1-d80b-466b-8479-c58d13608187'}],\n",
+              "        'tool_call_chunks': [{'name': 'get_exchange_rate',\n",
+              "          'args': '{\"currency_from\": \"USD\", \"currency_to\": \"INR\"}',\n",
+              "          'id': 'b65d40b1-d80b-466b-8479-c58d13608187',\n",
+              "          'index': None}],\n",
+              "        'invalid_tool_calls': []}}],\n",
+              "     'tool_call_id': 'b65d40b1-d80b-466b-8479-c58d13608187'}},\n",
+              "   {'amount': 1.0,\n",
+              "    'base': 'USD',\n",
+              "    'date': '2024-06-21',\n",
+              "    'rates': {'INR': 83.57}}]]}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -295,10 +354,31 @@
         ")"
       ],
       "metadata": {
-        "id": "5pMuWw6SaGvt"
+        "id": "5pMuWw6SaGvt",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6d0f0043-d394-4e2a-fcaf-a03801bed31a"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "INFO:vertexai.reasoning_engines._reasoning_engines:Using bucket agent_kv_ex1\n",
+            "INFO:vertexai.reasoning_engines._reasoning_engines:Writing to gs://agent_kv_ex1/reasoning_engine/reasoning_engine.pkl\n",
+            "INFO:vertexai.reasoning_engines._reasoning_engines:Writing to gs://agent_kv_ex1/reasoning_engine/requirements.txt\n",
+            "INFO:vertexai.reasoning_engines._reasoning_engines:Creating in-memory tarfile of extra_packages\n",
+            "INFO:vertexai.reasoning_engines._reasoning_engines:Writing to gs://agent_kv_ex1/reasoning_engine/dependencies.tar.gz\n",
+            "INFO:vertexai.reasoning_engines._reasoning_engines:Creating ReasoningEngine\n",
+            "INFO:vertexai.reasoning_engines._reasoning_engines:Create ReasoningEngine backing LRO: projects/17529158352/locations/us-central1/reasoningEngines/7374257361726210048/operations/2815373499437154304\n",
+            "INFO:vertexai.reasoning_engines._reasoning_engines:ReasoningEngine created. Resource name: projects/17529158352/locations/us-central1/reasoningEngines/7374257361726210048\n",
+            "INFO:vertexai.reasoning_engines._reasoning_engines:To use this ReasoningEngine in another session:\n",
+            "INFO:vertexai.reasoning_engines._reasoning_engines:reasoning_engine = vertexai.preview.reasoning_engines.ReasoningEngine('projects/17529158352/locations/us-central1/reasoningEngines/7374257361726210048')\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -308,10 +388,55 @@
         ")"
       ],
       "metadata": {
-        "id": "kRmMqB6gaPsb"
+        "id": "kRmMqB6gaPsb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "13a8ad3d-cffe-47e7-ae10-4064577a2e45"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'input': \"What's the exchange rate from US dollars to Indian currency today?\",\n",
+              " 'output': 'The exchange rate from US dollars to Indian rupees is 1 USD to 83.57 INR. \\n'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "remote_agent.query(\n",
+        "    input=\"explain ai\"\n",
+        ")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PJA6tXVLJAvQ",
+        "outputId": "c314456e-927b-4f96-df3a-c67f9bbb6b88"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'output': 'AI, or Artificial Intelligence, is a broad term that refers to the ability of computer systems to perform tasks that typically require human intelligence, such as:\\n\\n* **Learning:** Acquiring knowledge and skills from data or experiences.\\n* **Reasoning:** Using logic and rules to solve problems and make decisions.\\n* **Problem-solving:** Finding solutions to complex or challenging situations.\\n* **Perception:** Interpreting sensory information, such as images, sounds, and text.\\n* **Natural Language Processing:** Understanding and generating human language.\\n\\nAI encompasses a wide range of techniques and approaches, including:\\n\\n* **Machine Learning:** Algorithms that allow computers to learn from data without explicit programming.\\n* **Deep Learning:** A subset of machine learning that uses artificial neural networks with multiple layers.\\n* **Computer Vision:** Enabling computers to \"see\" and interpret images.\\n* **Robotics:** Designing and building robots that can perform tasks autonomously or semi-autonomously.\\n\\nAI has the potential to revolutionize various industries, from healthcare and finance to transportation and entertainment. \\n',\n",
+              " 'input': 'explain ai'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
     }
   ]
 }
